--- a/index.html
+++ b/index.html
@@ -9,11 +9,145 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
     <link rel="stylesheet" href="style.css">
-    <title>Hello, world!</title>
+    <link rel="stylesheet" href="https://use.typekit.net/usc0fiz.css">
+    <title>gevinst</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+      <header>
+        <nav class="navbar navbar-expand-xl navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">gevinst</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarWithDropdown" aria-controls="navbarWithDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse show" id="navbarWithDropdown">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Features</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Dropdown link
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+      </header>
+      <main>
+        <section id="hero">
+            <div class="fluid-container bg-no-overlay">
+                <div class="row text-center header-wrapper">
+                <h1>selv vikingerne spiste grød, så kan du også</h1>
+            </div>
+            </div>
+          </section>
+          <section id="about_us" class="fluid-container">
+              <div class="row about">
+                  <h3 class="text-center">Nordisk grød med et kaffetwist</h3>
+                  <h2 class="text-center">gevinst</h2>
+                  <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+          </section>
+          <section id="products-section-1" class="products-1 container">
+              <div id="box1">
+                  <p>Grød</p>
+              </div>
+              <div class="row p-5 g-md-5">
+                <div class="col-6 text-center mb-5 d-xl-flex justify-xl-start">
+                    <div class="col-xl-6 d-xl-flex flex-xl-row">
+                    <img class="img-fluid mb-2" src="assets/testgrid1.png" alt="" />
+                    <h4 class="text-center text-xl-left align-self-xl-center col-xl-12">Produkt 1</h4>
+                  </div>
+                </div>
+              <div class="col-6 text-center mb-5 d-xl-flex justify-xl-start">
+                <div class="col-xl-6 d-xl-flex flex-xl-row">
+                    <img class="img-fluid mb-2" src="assets/testgrid1.png" alt="" />
+                    <h4 class="text-center text-xl-left align-self-xl-center col-xl-12">Produkt 2</h4>
+                  </div>
+                  </div>
+                  <div class="col-6 text-center mb-5 d-xl-flex justify-xl-start">
+                    <div class="col-xl-6 d-xl-flex flex-xl-row">
+                    <img class="img-fluid mb-2" src="assets/testgrid1.png" alt="" />
+                    <h4 class="text-center text-xl-left align-self-xl-center col-xl-12">Produkt 3</h4>
+                  </div>
+                </div>
+              <div class="col-6 text-center mb-5 d-xl-flex justify-xl-start">
+                <div class="col-xl-6 d-xl-flex flex-xl-row">
+                    <img class="img-fluid mb-2" src="assets/testgrid1.png" alt="" />
+                    <h4 class="text-center text-xl-left align-self-xl-center col-xl-12">Produkt 4</h4>
+                  </div>
+                  </div>
+          </div>
+          </section>
+          <section id="products-section-2" class="products-2 container">
+            <div id="box2">
+                <p>Butters</p>
+            </div>
+            <div class="row p-5 g-md-5">
+                <div class="col-6 text-center mb-5 d-xl-flex justify-xl-start">
+                    <div class="col-xl-6 d-xl-flex flex-xl-row">
+                    <img class="img-fluid mb-2" src="assets/testgrid1.png" alt="" />
+                    <h4 class="text-center text-xl-left align-self-xl-center col-xl-12">Produkt 1</h4>
+                  </div>
+                </div>
+              <div class="col-6 text-center mb-5 d-xl-flex justify-xl-start">
+                <div class="col-xl-6 d-xl-flex flex-xl-row">
+                    <img class="img-fluid mb-2" src="assets/testgrid1.png" alt="" />
+                    <h4 class="text-center text-xl-left align-self-xl-center col-xl-12">Produkt 2</h4>
+                  </div>
+                  </div>
+                  <div class="col-6 text-center mb-5 d-xl-flex justify-xl-start">
+                    <div class="col-xl-6 d-xl-flex flex-xl-row">
+                    <img class="img-fluid mb-2" src="assets/testgrid1.png" alt="" />
+                    <h4 class="text-center text-xl-left align-self-xl-center col-xl-12">Produkt 3</h4>
+                  </div>
+                </div>
+              <div class="col-6 text-center mb-5 d-xl-flex justify-xl-start">
+                <div class="col-xl-6 d-xl-flex flex-xl-row">
+                    <img class="img-fluid mb-2" src="assets/testgrid1.png" alt="" />
+                    <h4 class="text-center text-xl-left align-self-xl-center col-xl-12">Produkt 4</h4>
+                  </div>
+                  </div>
+          </div>
+        </section>
+       
+        <section id="social-section" class="fluid-container">
+            <div class="d-md-flex">
+            <div class="row social p-5 col-md-5">
+                <h3 class="social-header">Følg med</h3>
+                <p class="social-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+                <div class="d-flex flex-row ">
+                    <div class="p-5 ">
+                        <button type="button" class="btn btn-link">Instagram</button>
+                    </div>
+                    <div class="p-5">
+                        <button type="button" class="btn btn-link">Facebook</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="row collage">
+                    <img src="assets/hero-img.jpg" class="img-fluid" alt="">
+                </div>
+            </div>
+        </section>
 
+
+          
+      </main>
     <!-- Bootstrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 
